feat: Binary xml (#95)
* initial exi spike

* more data

* forgot exi infra

* moved the fixtures over and updated tests

* schemas not public

* ci and data and test updates

* forgot to commit the class

* bugs